--- a/package.json
+++ b/package.json
@@ -8,5 +8,9 @@
     "react": "^0.10.0",
     "react-async": "^0.9.2",
     "react-router-component": "^0.18.3"
+  },
+  "devDependencies": {
+    "gulp": "^3.6.2",
+    "gulp-react": "^0.3.3"
   }
 }
